--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,7 @@ body{
 nav{
     background-color: #085596;
     height: 36px;
+    padding-right: 15px;
 }
 
 .sign_menu{
@@ -115,7 +116,7 @@ section{
     margin: 30px;
 }
 
-.input_field input:hover{
+.input_field input:focus{
     background-color: #1b5288;
     box-shadow: 0 0 4px 2px rgba(70,127,171,1);
 }
